<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/titleRlayout"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/titleIcon"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_centerVertical="true"
            android:src="@mipmap/aac_ico" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/titleIcon"
            android:text="@string/titleName"
            android:textColor="#000"
            android:textSize="12sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:layout_below="@+id/titleRlayout"
        android:background="@mipmap/main_theme_aac_en" />

    <RelativeLayout
        android:id="@+id/filepathLlayout"
        android:layout_width="match_parent"
        android:layout_height="35dip"
        android:layout_below="@+id/imageView">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/filePath_tv"
            android:textColor="#000"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/file_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:focusable="false"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/openfile_btn"
            android:layout_toRightOf="@+id/title_tv"
            android:hint="@string/open_file_tips"
            android:textColor="#000"
            android:textSize="10sp" />

        <Button
            android:id="@+id/openfile_btn"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/open_btn"
            android:textColor="#000"
            android:textSize="10sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/content_llayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomRlayout"
        android:layout_below="@+id/filepathLlayout"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/basicinfo_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/basicinfo_tv"
                android:textColor="#000"
                android:textSize="12sp" />

            <ExpandableListView
                android:id="@+id/basicinfo_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/output_option_rlayout"
                android:layout_below="@+id/basicinfo_tv"
                android:background="#f5f5f5"
                android:cacheColorHint="#f5f5f5"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="7dip"
                android:groupIndicator="@null"/>

            <RelativeLayout
                android:id="@+id/output_option_rlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/output_option_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/output_option_tv"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/output_format_llayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/output_option_tv"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/outformatTip_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black"
                        android:text="@string/outout_format_tv"
                        android:textSize="10sp" />

                    <Spinner
                        android:id="@+id/output_format_spDwon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/output_sample_llayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/output_format_llayout"
                    android:layout_marginLeft="5dip"
                    android:layout_marginTop="12dip"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/outputSampleTips_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:singleLine="true"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:textColor="@color/black"
                        android:text="@string/output_sample_rate_tv"
                        android:textSize="10sp" />

                    <Spinner
                        android:id="@+id/output_sample_spDwon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="10sp"/>

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1">

            <TextView
                android:id="@+id/audio_frame_list_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/audioframe_tv"
                android:textColor="#000"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/totalnal_cb"
                android:layout_width="wrap_content"
                android:layout_height="18dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/audio_frame_list_tv"
                android:layout_marginTop="7dip"
                android:text="@string/limit_cb"
                android:textSize="10sp" />

            <ListView
                android:id="@+id/aac_adts_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/progress_rlayout"
                android:layout_below="@+id/totalnal_cb"
                android:layout_marginLeft="7dip"
                android:layout_marginBottom="15dip"
                android:fadeScrollbars="false"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/empty_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/nalempty_tv"
                android:textColor="#ffafafaf"
                android:textSize="18sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/progress_rlayout"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="7dip">

                <TextView
                    android:id="@+id/progress_tips_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2.5"
                    android:text="@string/progress_tv"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/hor_pbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:max="100"
                    android:padding="0dip" />

                <TextView
                    android:id="@+id/progress_val_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2.5"
                    android:text="100%"
                    android:textColor="#000"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottomRlayout"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip">

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dip"
            android:text="@string/exit_btn"
            android:textSize="12sp" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dip"
            android:layout_toLeftOf="@+id/exit_btn"
            android:text="@string/about_btn"
            android:textSize="12sp" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dip"
            android:layout_toLeftOf="@+id/about_btn"
            android:text="@string/start_btn"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>
